--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "explorer.excludeGitIgnore": true
+    "explorer.excludeGitIgnore": true, //cambiar a false en caso de necesitar visualizar el .env o el package-lock.json
 }
