--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20.11.30",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
     "ascii-table3": "^0.9.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mersenne-twister": "^1.1.0"
   }
 }
