--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/sqlite3": "^3.1.11",
     "ascii-table3": "^0.9.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
@@ -22,9 +23,12 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mersenne-twister": "^1.1.0"
+    "mersenne-twister": "^1.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
