--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grilla_cocineros",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "dev": "npx nodemon",
     "start": "npm run build && node build/index.js",
